# Duke-Lido

./: .gitignore  CMakeLists-bk.txt  CMakeLists.txt  Doxyfile  JetReader.py  LidoJetTest.py  README.md  get_test_hydro_profiles.sh  lido_setting.xml  plot  settings.xml  setup.py  summary.txt
HeavyQuarkMains/: HQ-2Dhydro-couple-new.cpp  HQ-2Dhydro-couple.cpp  decay.cpp  pythia_HQ_baseline.cpp  pythia_HQ_baseline_new.cpp  pythia_HQ_gen.h
JetMains/: .LidoExpanding.cpp.swp  2Dhydro-jet-analysis.cpp  Dijet.cpp  ElossTest.cpp  Lido2DHydro.cpp  LidoExpanding.cpp  Lido_AA_gammajet_7piD8.cpp  Lido_pp.cpp  Lido_pp_gammajet_7piD8.cpp  PGun.h  PGunTest.cpp  PGunWithShower.h  ParticleInBrick.cpp  hfbrick.cpp  jet-2Dhydro-couple.cpp  jet-decompose.cpp  jet-pTmin.cpp  jet-pp-gen.cpp  pythia_jet_gen.h  testsource.cpp
NERSC/: input_AA  input_pp  run-jets.py  single-run  single-run-pp
TestMains/: Lido-Incoherent-tests.cpp  Lido-R-tests.cpp  Lido-TabGen.cpp  Lido-X-tests.cpp  PGunWithShower.h  brick.cpp  jet-energy-flow.cpp  testsource.cpp
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
cmakemodules/: FindPythia8.cmake
cython/: event.cpp  event.pyx  pyScattering.cpp  pyScattering.pyx
doc/: Installation.rst  Makefile  Tests.rst  conf.py  index.rst  make.bat
doc/_templates/: layout.html
doc/tex/: doc.tex
examples/: 2Dhydro-jet-analysis.cpp  HQ-2Dhydro-couple.cpp  Lido-TabGen.cpp  Makefile  Onium-test.cpp  analytic-medium.cpp  brick-pythia.cpp  brick.cpp  example-pythia8.cpp  example1.cpp  example2.cpp  example2.cpp~  example3.cpp  hydro-couple.cpp  jet-2Dhydro-couple.cpp  jet-3Dhydro-couple.cpp  jet-hydro-couple.cpp  jet-pp-gen.cpp  jet-pythia.cpp  jet_finding  jet_finding.cpp  lido_settings.xml  pythia-AuAu-200-setting.txt  pythia-PbPb-5020-setting.txt  pythia-jet-setting  pythia-jet-setting.txt  pythia-pp-200-setting.txt  pythia-pp-setting.txt  pythia-pp.cpp  pythia-setting.txt  pythia_HQ_baseline.cpp  pythia_HQ_gen.h  pythia_jet_gen.h  pythia_jet_tree.h  pythia_wrapper.h  settings.xml  testsource.cpp
examples/old-code/: hydro-couple.cpp
examples/read_table/: a.out  read.cpp  table.h5
html/: CMakeLists_8txt.html  Hadronize_8cpp.html  Hadronize_8cpp.js  Hadronize_8h.html  Hadronize_8h_source.html  Langevin_8cpp.html  Langevin_8cpp.js  Langevin_8h.html  Langevin_8h.js  Langevin_8h_source.html  Medium__Reader_8cpp.html  Medium__Reader_8h.html  Medium__Reader_8h_source.html  Rate_8cpp.html  Rate_8h.html  Rate_8h_source.html  StochasticBase_8cpp.html  StochasticBase_8h.html  StochasticBase_8h_source.html  TableBase_8cpp.html  TableBase_8cpp.js  TableBase_8h.html  TableBase_8h.js  TableBase_8h_source.html  Xsection_8cpp.html  Xsection_8h.html  Xsection_8h_source.html  annotated.html  annotated_dup.js  approx__functions_8cpp.html  approx__functions_8cpp.js  approx__functions_8h.html  approx__functions_8h.js  approx__functions_8h_source.html  asa047_8cpp.html  asa047_8cpp.js  asa047_8hpp.html  asa047_8hpp.js  asa047_8hpp_source.html  classAiMS-members.html  (+265 more)
jet_analysis/: CMakeLists.txt  JetAnalyzer.h  JetCrossSectionAnalyzer.h  JetReader.py  LidoJetTest.py  Makefile  jet_finding  jet_finding.cpp  jet_finding.h
latex/: CMakeLists_8txt.tex  Hadronize_8cpp.tex  Hadronize_8h.tex  Langevin_8cpp.tex  Langevin_8h.tex  Medium__Reader_8cpp.tex  Medium__Reader_8h.tex  Rate_8cpp.tex  Rate_8h.tex  StochasticBase_8cpp.tex  StochasticBase_8h.tex  TableBase_8cpp.tex  TableBase_8h.tex  Xsection_8cpp.tex  Xsection_8h.tex  annotated.tex  approx__functions_8cpp.tex  approx__functions_8h.tex  asa047_8cpp.tex  asa047_8hpp.tex  classAiMS.tex  classDebye__mass.tex  classEffRate12.eps  classEffRate12.tex  classJetDenseMediumHadronize.tex  classMedium.tex  classRate.eps  classRate.tex  classSamplerStat.tex  classStochasticBase.eps  classStochasticBase.tex  classTableBase.tex  classTransverPositionSampler.tex  classXsection.eps  classXsection.tex  classcollision__manager.tex  classcubeture__nd.tex  classff.tex  classgsl__minimize__nd.tex  classgsl__quad__1d.tex  (+50 more)
rtf/: formula.repository  refman.rtf
settings/: lido_settings.xml  pythia-PbPb-5020-setting.txt  pythia-pp-5020-setting.txt
settings_and_tables/: lido_a0d3_box_settings.xml  lido_a0d3_settings.xml  lido_mu1_settings.xml  lido_mu1d5.xml  lido_mu2.xml  lido_setting.xml  pythia-PbPb-5020-setting.txt  pythia-pp-5020-setting.txt  res-table.h5
space-time-brem/: brem.py  run.py
src/: #workflow.cpp#  CMakeLists.txt  Hadronize.cpp  Hadronize.h  Langevin.cpp  Langevin.h  Medium_Reader.cpp  Medium_Reader.h  Onium_Disso_dR.cpp  Onium_Disso_dR.h  Onium_Rate.cpp  Onium_Rate.h  Onium_Reco_dR.cpp  Onium_Reco_dR.h  Onium_predefine.cpp  Onium_predefine.h  Rate.cpp  Rate.h  StochasticBase.cpp  StochasticBase.h  TableBase.cpp  TableBase.h  Xsection.cpp  Xsection.h  approx_functions.cpp  approx_functions.h  collision_manager.cpp  collision_manager.h  integrator.h  lido.cpp  lido.h  logo.h  lorentz.h  main.cpp  matrix_elements.cpp  matrix_elements.h  matrix_elements_1-2.cpp  matrix_elements_2-2.cpp  matrix_elements_2-3.cpp  minimizer.h  (+10 more)
test/: EPS09-sample-parameter.txt  Eloss.py  Raa.py  box-raa.py  compare_cb.py  full-qhat.py  generate.py  hist.py  nCTEQ-sample-parameter.txt  plot  posterior_qhat.py  settings.xml  thermal.py
xml/: CMakeLists_8txt.xml  Hadronize_8cpp.xml  Hadronize_8h.xml  Langevin_8cpp.xml  Langevin_8h.xml  Medium__Reader_8cpp.xml  Medium__Reader_8h.xml  Rate_8cpp.xml  Rate_8h.xml  StochasticBase_8cpp.xml  StochasticBase_8h.xml  TableBase_8cpp.xml  TableBase_8h.xml  Xsection_8cpp.xml  Xsection_8h.xml  approx__functions_8cpp.xml  approx__functions_8h.xml  asa047_8cpp.xml  asa047_8hpp.xml  classAiMS.xml  classDebye__mass.xml  classEffRate12.xml  classJetDenseMediumHadronize.xml  classMedium.xml  classRate.xml  classSamplerStat.xml  classStochasticBase.xml  classTableBase.xml  classTransverPositionSampler.xml  classXsection.xml  classcollision__manager.xml  classcubeture__nd.xml  classff.xml  classgsl__minimize__nd.xml  classgsl__quad__1d.xml  classgsl__vegas.xml  classlido.xml  collision__manager_8cpp.xml  collision__manager_8h.xml  converged_8h.xml  (+44 more)
(+229 files in other folders)
